<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DashboardActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <View
            android:id="@+id/dividerToolbar"
            style="@style/ToolbarDivider"
            android:layout_below="@+id/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/dividerToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_12sdp">

                <TextView
                    style="@style/SmallFontTextView"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/lbl_address"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/txtAddress"
                    style="@style/VerySmallFontTextView"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginEnd="120sp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/dash_sign"
                    android:text=""
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/txtChangeAddress"
                    style="@style/SmallFontTextView"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_3sdp"
                    android:text="@string/lbl_add_client_address"
                    android:textColor="@color/colorYellowDark"
                    android:textSize="@dimen/_13ssp" />

                <View
                    style="@style/Divider"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@color/colorPrimaryText" />

                <TextView
                    style="@style/SmallFontTextView"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/lbl_pick_up_time_slot"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_10ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_weight="0.7"
                        android:orientation="vertical">

                        <TextView
                            style="@style/VerySmallFontTextView"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/lbl_select_date"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimaryText"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/edtSelectDate"
                            style="@style/VerySmallFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/img_dropdown_bg"
                            android:drawableEnd="@drawable/ic_arrow_drop_down"
                            android:focusable="false"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/lbl_select_date"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_4sdp"
                            android:paddingEnd="@dimen/_3sdp"
                            android:paddingBottom="@dimen/_4sdp"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHint" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/VerySmallFontTextView"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/lbl_select_time"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimaryText"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/edtSelectTime"
                            style="@style/VerySmallFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/img_dropdown_bg"
                            android:drawableEnd="@drawable/ic_arrow_drop_down"
                            android:focusable="false"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/lbl_select_time"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_4sdp"
                            android:paddingEnd="@dimen/_3sdp"
                            android:paddingBottom="@dimen/_4sdp"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHint" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/SmallFontTextView"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/lbl_deliver_time_slot"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_10ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_16sdp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_weight="0.7"
                        android:orientation="vertical">

                        <TextView
                            style="@style/VerySmallFontTextView"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/lbl_select_date"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimaryText"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/edtSelectDeliverDate"
                            style="@style/VerySmallFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/img_dropdown_bg"
                            android:drawableEnd="@drawable/ic_arrow_drop_down"
                            android:focusable="false"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/lbl_select_date"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_4sdp"
                            android:paddingEnd="@dimen/_3sdp"
                            android:paddingBottom="@dimen/_4sdp"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHint" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/VerySmallFontTextView"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/lbl_select_time"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimaryText"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/edtSelectDeliverTime"
                            style="@style/VerySmallFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/img_dropdown_bg"
                            android:drawableEnd="@drawable/ic_arrow_drop_down"
                            android:focusable="false"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/lbl_select_time"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_4sdp"
                            android:paddingEnd="@dimen/_3sdp"
                            android:paddingBottom="@dimen/_4sdp"
                            android:textColor="@color/colorPrimaryText"
                            android:textColorHint="@color/colorHint" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/routOrderList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        style="@style/Divider"
                        android:background="@color/colorPrimaryText" />

                    <TextView
                        style="@style/SmallFontTextView"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/lbl_order_details"
                        android:textAllCaps="true"
                        android:textColor="@color/colorYellowDark"
                        android:textSize="@dimen/_11ssp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSelectedItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false" />

                </LinearLayout>

                <View
                    style="@style/Divider"
                    android:background="@color/colorPrimaryText" />

                <TextView
                    style="@style/SmallFontTextView"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/lbl_order_note"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_10ssp" />

                <EditText
                    android:id="@+id/edtNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/img_edit_text_bg"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="top"
                    android:hint="@string/hint_enter_order_note"
                    android:lines="3"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/btnNext"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@color/colorPrimaryText"
                    app:mrl_rippleColor="#2C7A7A7A"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleDuration="100"
                    app:mrl_rippleOverlay="true">

                    <TextView
                        android:id="@+id/txtNext"
                        style="@style/SmallFont"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center"
                        android:text="@string/lbl_confirm_order"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_9ssp" />
                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>

</layout>